style.css
html {
    font-size: 16px;
    font-family: Oswald;
}

body {
    background-color: darksalmon;
    margin: 8px 0;
}

a {
    text-decoration: none;
    color: black;
}

.nav-bar li {
    display: inline-flex;
    justify-content: space-evenly;
    width: 100%;
}

.intro {
    height: 63rem;
    padding-top: 1rem;
}

.intro .flag {
    height: 8rem;
}

#top {
    background-color: red;
    height: 21rem;
}

#bottom {
    background-color: green;
    height: 21rem;
}

.intro h1 {
    justify-content: center;
    align-items: center;
    display: flex;
    background-color: black;
    color: darksalmon;
    height: 21rem;
    margin: 0;
}

.about {
    margin: 3rem;
    font-size: 20px;
}

.photos {
    display: flex;
    flex-direction: row;
    gap: 1rem;
    justify-content: center;
}

.photos img {
    border-radius: 5%;
    width: 30%;
    object-fit: cover;
    overflow: hidden;
    margin: 0.5rem;
}

.testimonial {
    background-color: teal;
    font-size: 20px;
    height: 20rem;
    padding: 1rem 2rem;
    color: rgba(255, 255, 0, 0.9);
}

@media only screen and (max-width: 55rem) {
    .photos {
      flex-direction: column;
      align-items: center;
    }

    .photos img {
        width: 80%;
    }
}

  @media only screen and (max-width: 320px) {

    .testimonial h1 {
      font-size: 2rem;
    }

    .photos img {
      width: 100%;
    }
  }

